@@ -1,5 +1,13 @@
 2005-11-14  Sebastien Bacher  <seb128@debian.org>
 
+	* schemas/desktop_gnome_interface.schemas.in:
+	describe the new XSettings to control the visibility of the 
+	input method and Unicode control character submenus in the context 
+	menus of entries and text views, change by Matthias Clasen 
+	(Closes: #319637). 
+
+2005-11-14  Sebastien Bacher  <seb128@debian.org>
+
 	* schemas/desktop_gnome_peripherals_mouse.schemas.in:
 	Updated the descriptions for the cursor changes with the new GTK
 	(Closes: #311524).
